[gd_scene load_steps=14 format=3 uid="uid://b0uduid82tfom"]

[ext_resource type="Script" uid="uid://brljn24cx5mvd" path="res://UI/course_select.gd" id="1_0sj8v"]
[ext_resource type="Texture2D" uid="uid://c3vimms87tjyt" path="res://Textures/fillerBG.png" id="2_gf1gl"]
[ext_resource type="Script" uid="uid://d30p27ii7dudq" path="res://Scenes/Courses/filler_bg_scroll.gd" id="3_saulr"]
[ext_resource type="FontFile" uid="uid://ckxc1xxfkae17" path="res://Fonts/FOT-Seurat Pro B.otf" id="6_152jn"]
[ext_resource type="FontFile" uid="uid://b8xsi0etksurk" path="res://Fonts/FOT-Rodin Pro B.otf" id="7_v3cdk"]
[ext_resource type="Texture2D" uid="uid://ys7qr68kgjuv" path="res://Textures/Character Icons/No Portrait.png" id="9_35p8f"]
[ext_resource type="Texture2D" uid="uid://blff5mgl0qwlg" path="res://Textures/CssCursorP1.png" id="15_ekcwh"]
[ext_resource type="Texture2D" uid="uid://w1r2egnw3it" path="res://Textures/CssCursorP2.png" id="16_lqva8"]
[ext_resource type="Texture2D" uid="uid://bmf1mg0hcnj21" path="res://Textures/CssCursorP3.png" id="17_4i7mf"]
[ext_resource type="Texture2D" uid="uid://bak3gdbvf32n5" path="res://Textures/CssCursorP4.png" id="18_wiaem"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qhe80"]
sky_top_color = Color(0.17251666, 0.15950002, 0.55, 1)
sky_horizon_color = Color(0.40200004, 0.42880005, 0.67, 1)
ground_bottom_color = Color(0.68571997, 0.68039995, 0.84, 1)
ground_horizon_color = Color(0.40392157, 0.42745098, 0.67058825, 1)

[sub_resource type="Sky" id="Sky_5a7ea"]
sky_material = SubResource("ProceduralSkyMaterial_qhe80")

[sub_resource type="Environment" id="Environment_v6bfk"]
background_mode = 2
sky = SubResource("Sky_5a7ea")

[node name="CourseSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0sj8v")

[node name="FillerBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2196.0
offset_top = -1794.5
offset_right = 2196.0
offset_bottom = 1794.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gf1gl")
stretch_mode = 1
script = ExtResource("3_saulr")

[node name="ConsoleLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 494.0
offset_top = 12.0
offset_right = -494.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 32
text = "words"

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("6_152jn")
theme_override_font_sizes/font_size = 64
text = "Course Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharName1" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 219.0
offset_right = 271.0
offset_bottom = 312.0
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("6_152jn")
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v6bfk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.87280387, -0.48455507, -0.05847978, -0.11521066, -0.32097575, 0.94005394, -0.47427833, -0.8137451, -0.33597475, 0.059451103, 3.2686012, 4.7683716e-07)
shadow_enabled = true

[node name="CourseIcons" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 147.0
offset_top = 132.0
offset_right = -749.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="CharIcon1" type="TextureRect" parent="CourseIcons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource("9_35p8f")

[node name="CharIcon2" type="TextureRect" parent="CourseIcons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource("9_35p8f")

[node name="CursorP1" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("15_ekcwh")

[node name="CursorP2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("16_lqva8")

[node name="CursorP3" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("17_4i7mf")

[node name="CursorP4" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("18_wiaem")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Title" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 510.0
offset_top = 247.0
offset_right = -495.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Return to Title"

[node name="MusicCredit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = 301.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("7_v3cdk")
theme_override_font_sizes/font_size = 24
text = "â™ªstuck - John \"Joy\" Tay"
vertical_alignment = 2

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 383.0
offset_top = 437.0
offset_right = -371.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "Start"

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="pressed" from="Title" to="." method="_on_netplay_setup_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_button_pressed"]
